# bdev-cli

./: .gitignore  AGENTS.md  B.DEV.bat  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  QUICKSTART.md  README.md  RELEASE-NOTES.md  Start-BDEV.ps1  add-to-profile.ps1  bdev-direct.cmd  bdev.cmd  bdev.py  bdev_direct.py  copy-to-bin.ps1  create-shortcut.ps1  demo_animations.py  install.ps1  load-bdev.ps1  pyproject.toml  requirements.txt  setup-session.ps1  setup.py  test-bdev.bat  uninstall.ps1  use-bdev-now.ps1  verify-install.ps1
cli/: __init__.py  __main__.py  main.py
cli/core/: __init__.py  aliases.py  async_runner.py  audit.py  chainer.py  config.py  event_bus.py  project_config.py  rbac.py  repl.py  security.py  workflows.py
cli/plugins/: __init__.py  ai.py  cicd.py  cloud.py  context.py  database.py  docker.py  doctor.py  git_advanced.py  git_tools.py  github.py  kubernetes.py  monitoring.py  npm.py  project.py  scripts.py  shell.py  snippets.py  system.py  templates.py  terraform.py  todo.py
cli/utils/: __init__.py  animation.py  errors.py  theme.py  ui.py
tests/: conftest.py  test_config.py  test_git_tools.py  test_plugins.py  test_todo.py
