[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdev-cli"
version = "0.2.0"
description = "B.DEV CLI - Your Personal Development Assistant"
readme = "README-WINDOWS.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "B.DEV", email = "dev@b.dev"}
]
keywords = ["cli", "development", "git", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

dependencies = [
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "typer>=0.9",
    "pyotp>=2.9",
    "passlib[bcrypt]>=1.7",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
bdev = "cli.main:run"

[project.urls]
Homepage = "https://github.com/bdev/bdev-cli"
Documentation = "https://docs.bdev.dev"
Repository = "https://github.com/bdev/bdev-cli"

[tool.setuptools]
packages = ["cli"]

[tool.setuptools.package-data]
cli = ["**/*.json", "**/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
